<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.taingdev.weatherapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/action_search"
        android:name="com.taingdev.weatherapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/action_city_detail"
        android:name="com.taingdev.weatherapp.ui.citydetail.CityDetailFragment"
        android:label="@string/title_city_detail"
        tools:layout="@layout/fragment_city_detail">
        <argument
            android:name="extra_city"
            app:argType="com.taingdev.weatherapp.model.CityItem" />
    </fragment>
</navigation>