<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="androidx.lifecycle.LiveData" />
        <import type="android.view.View"/>

        <variable
            name="errorMessage"
            type="LiveData&lt;String>" />

        <variable
            name="showError"
            type="LiveData&lt;Boolean>" />

        <variable
            name="showLoading"
            type="LiveData&lt;Boolean>" />
    </data>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="search"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextAppearance="@style/ToolbarTextAppearanceNormal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/text_search_city"
                    android:inputType="text|textAutoComplete"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textAppearance="@style/TextViewSubtitle1">

                    <requestFocus />
                </com.google.android.material.textfield.TextInputEditText>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <ImageView
                        android:id="@+id/voiceSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?roundSelector"
                        android:padding="12dp"
                        android:src="@drawable/ic_mic"
                        app:tint="?attr/colorControlNormal"
                        tools:visibility="gone" />

                    <ImageView
                        android:id="@+id/clearText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?roundSelector"
                        android:padding="12dp"
                        android:visibility="gone"
                        android:src="@drawable/ic_close"
                        app:tint="?attr/colorControlNormal"
                        tools:visibility="visible" />
                </FrameLayout>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_results"
        android:textAppearance="@style/TextViewHeadline6"
        android:visibility="gone"
        tools:visibility="visible" />

    <include
        android:id="@+id/layout_progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        showLoading="@{showLoading}"
        errorMessage="@{errorMessage}"
        showError="@{showError}"
        layout="@layout/layout_progress_bar"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/keyboardPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="62dp"
        android:text="@string/keyboard"
        android:textAppearance="@style/TextViewHeadline6"
        app:icon="@drawable/ic_keyboard" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
